Sun Apr 26 11:57:32 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/Makefile.am, examples/explicit-fdm-heat.gel: Add example
	  heat equation solved with explicit FDM.

Tue Apr 21 00:35:54 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/laplace-fdm.gel: update to add more things to play around
	  with such as nonhomogenity and make it easy to change boundary
	  conditions.  Also rename points to intervals as that's what it
	  actually is, and document the thing a bit more.

Wed Apr 08 11:39:22 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/vibrating-drumhead-modes.gel: make n consistently come
	  first and fix up whitespace

Tue Apr 07 14:28:45 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/vibrating-drumhead-modes.gel:  Add example showing
	  various modes of a vibrating drumhead (wave equation)

Mon Mar 09 17:25:09 2015  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.20

Thu Feb 26 15:01:17 2015  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update mersenne highest doublechecked
	  exponent

Thu Feb 26 14:30:40 2015  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/elementary.gel, src/funclib.c: Use MPFR version of
	  erf for real values, and move the hacky computation using power
	  series as gel snippet inside funclib.c.  Should be replaced by
	  a proper computation

Mon Feb 16 14:26:02 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/fourier-series-plotting.gel: Replace the hand coded
	  graph with more general code that can be used to show fourier
	  series for more functions

Fri Feb 13 11:46:57 2015  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: remove the inline from roundint.  Probably not
	  a performance bottleneck to begin with and likely the
	  compiler will inline by itself hopefully.  Removes compilation
	  errors with GCC5

Fri Jan 09 18:19:44 2015  Jiri (George) Lebl <jirka@5z.com>

	* examples/eulers-method-graphs-exp.gel: present plot window after