@@ -1212,6 +1212,14 @@ Im(4i)								4
 Re(4i)								0
 Re(4)								4
 Im(4)								0
+1.1+0.0001i							1.1+0.0001i
+1.1-0.0001i							1.1-0.0001i
+1-0.0001i							1-0.0001i
+1.1+0.000000000000000000000000000000000000000000000001i		1.1+0.0i
+1.1-0.000000000000000000000000000000000000000000000001i		1.1-0.0i
+1+0.000000000000000000000000000000000000000000000001i		1+0.0i
+0.00000000000000000000000000000000000001+1.1i			0.0+1.1i
+-0.00000000000000000000000000000000000001+1.1i			-0.0+1.1i
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
