@@ -2,6 +2,8 @@ Changes to 1.0.21
 
 * Add vibrating drumhead modes example, heat equation with explicit FDM,
   improve the Laplace FDM example
+* Fix output of chopped floating point numbers, especially chopped
+  imaginary parts
 
 * During making of these changes the author (Jiri) was partially supported by
   NSF grant DMS 1362337 and the Oklahoma State University
