@@ -1,3 +1,10 @@
+Mon May 04 17:34:29 2015  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: Fix output of chopped imaginary numbers, chopped
+	  negative numbers are now displayed as -0.0
+
+	* src/geniustests.txt: add some tests for the above
+
 Sun Apr 26 11:57:32 2015  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/Makefile.am, examples/explicit-fdm-heat.gel: Add example
